test/Tests/VertexInput/Overlap.golden

test\Tests\VertexInput\Overlap.hs:59:5: error:
    * Overlap at Location 1, Component 0:
        - V 4 Double with Location 0, Component 0,
        - V 4 Float with Location 1, Component 0.
    * In the expression:
        ShaderPipeline
          $ StructInput @VertexInput @(Triangle List)
              :>-> (vertex, "vertex.spv")
              :>-> (fragment, "fragment.spv")
      In an equation for `shaderPipeline':
          shaderPipeline
            = ShaderPipeline
                $ StructInput @VertexInput @(Triangle List)
                    :>-> (vertex, "vertex.spv")
                    :>-> (fragment, "fragment.spv")
   |
59 |   = ShaderPipeline
   |     ^^^^^^^^^^^^^^^...

test\Tests\VertexInput\Overlap.hs:59:5: error:
    * Overlap at Location 1, Component 0:
        - V 4 Double with Location 0, Component 0,
        - V 4 Float with Location 1, Component 0.
    * In the expression:
        ShaderPipeline
          $ StructInput @VertexInput @(Triangle List)
              :>-> (vertex, "vertex.spv")
              :>-> (fragment, "fragment.spv")
      In an equation for `shaderPipeline':
          shaderPipeline
            = ShaderPipeline
                $ StructInput @VertexInput @(Triangle List)
                    :>-> (vertex, "vertex.spv")
                    :>-> (fragment, "fragment.spv")
   |
59 |   = ShaderPipeline
   |     ^^^^^^^^^^^^^^^...
